# Heimdal-Shell

./: Cargo.toml  README.md
src/: chat.rs  commands.rs  main.rs  shell.rs
src/commands_enum/: commands_enum.rs  mod.rs
