[package]
name = "heimdal"
version = "0.1.0"
authors = ["Cyprien"]
edition = "2021"
#license = "MIT"
description = "A Rust-based shell interface that allows you to chat securely with someone else"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
rand = "0.9.1"
walkdir = "2.5.0"
rustyline = "16.0.0"
sha2 = "0.11.0-rc.0"
pbkdf2 = "0.13.0-rc.0"
serde = { version = "1.0.219", features = ["derive"] }
aes-gcm = "0.10.3"
serde_json = "1.0.140"
generic-array = "0.14.7"
libc = "0.2.174"

[package.metadata.deb]
maintainer = "Cyprien"
assets = [
    ["target/release/heimdal", "usr/bin/", "755"]
]